# vk-web-auto

./: README.md  docker-compose.yml
backend/: Cargo.toml
backend/scripts/VK2/: .gitignore  comments.txt  input.csv  main.py  order.txt  requirements.txt  setting.txt  test.py
backend/scripts/barkov111/: barkov.py  settings.txt  settings.xlsx  Инструкция.txt  просмотры.csv
backend/scripts/barkov111/Готовые файлы/: Детская тарелка.csv  Дорожная зубная щетка.csv  Ополаскиватель .csv  зубная паста в таблетках.csv  зубная паста отбеливающая.csv  зубная щетка для брекетов.csv  комфортер.csv  крем солнцезащитный .csv  ложка для прикорма.csv  нагрудник для кормления.csv  поильник детский.csv  поильник с трубочкой.csv  солнцезащитный крем детский.csv  электрическая зубная щетка.csv
backend/scripts/Охваты/: get_views_from_post.py  output.csv  settings.txt
backend/scripts/Охваты/Готовые файлы/: Набор для кормления.csv  зубная паста детская.csv
backend/scripts/сheck/: check.py  orderfull.txt  output.xlsx  Статус аккаунтов 11-40-14.xlsx  Статус аккаунтов 11-55-02.xlsx  Статус аккаунтов 14-18-17.xlsx  Статус аккаунтов 20-07-03.xlsx  Статус аккаунтов 20-26-46.xlsx
backend/src/: main.rs  types.rs
backend/src/routes/: barkov.rs  check.rs  coverage.rs  serder.rs
backend/src/scipts/: barkov.rs  check.rs  coverage.rs  mod.rs  serder.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: accounts.tsx  coverages.tsx  data-provider.tsx  posts.tsx  sender.tsx
nginx/: nginx.conf
nginx/conf/: nginx.conf
(+18 files in other folders)
