[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
actix-multipart = "0.6.1"
actix-files = "0.6.5"
env_logger = "0.11.3"
log = "=0.4.21"
actix-web-actors = "4.3.0"
actix = "0.13.3"